# recipe-manager

./: .gitignore  .gitpod.yml  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Recipe.cpp  Recipe.h  RecipeManager.cpp  RecipeManager.h  ci.yml  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
{     "name": "C++ Development",     "image": "mcr.microsoft.com/: .devcontainer.json
